--- a/src/extensions/looseassembly/LooseAssembly.NuGet/LooseAssembly.NuGet.csproj
+++ b/src/extensions/looseassembly/LooseAssembly.NuGet/LooseAssembly.NuGet.csproj
@@ -20,7 +20,7 @@
       <FullBlobPath>$(BlobBase)$(IndexName)</FullBlobPath>
     </PropertyGroup>
 
-    <DownloadFile SourceUrl="$(FullBlobPath)" DestinationFolder=".data">
+    <DownloadFile SourceUrl="$(FullBlobPath)" DestinationFolder=".data" Retries="3">
       <Output TaskParameter="DownloadedFile" ItemName="TheFile" />
     </DownloadFile>
 
