--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -10,7 +10,7 @@
     </AdditionalFiles>
   </ItemGroup>
 
-  <ItemGroup Condition="'$(Language)'=='C#'">
+  <ItemGroup Condition="'$(Language)'=='C#' AND $(IncludeBuildOutput)">
     <Compile Include="$(MSBuildThisFileDirectory)/shared/**/*.cs" />
   </ItemGroup>
 
