fix: handle some warnings added with VS 2022 Preview 5

--- a/src/common/Microsoft.DotNet.UpgradeAssistant.Abstractions/Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj
+++ b/src/common/Microsoft.DotNet.UpgradeAssistant.Abstractions/Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant</RootNamespace>
     <IsPackable>true</IsPackable>
+    <NoWarn>$(NoWarn);CA1848</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>Microsoft.DotNet.UpgradeAssistant.Abstractions</PackageId>
