--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,3 +21,5 @@ jobs:
       run: dotnet build hackathon.slnf --no-restore
     - name: Test
       run: dotnet test hackathon.slnf --no-build --verbosity normal
+    - name: Pack
+      run: dotnet pack hackathon.slnf --no-build
