--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore hackathon.slnf
     - name: Build
       run: dotnet build hackathon.slnf --no-restore
     - name: Test
