--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -5,7 +5,7 @@
     <MajorVersion>0</MajorVersion>
     <MinorVersion>3</MinorVersion>
     <!-- Build release-only package. -->
-    <PreReleaseVersionLabel>hackathon</PreReleaseVersionLabel>
+    <PreReleaseVersionLabel />
     <SkipPackagePublishingVersionChecks>true</SkipPackagePublishingVersionChecks>
     <!-- Opt-out repo features -->
     <UsingToolXliff>false</UsingToolXliff>
