--- a/src/analyzers/DeprecatedApis/DeprecatedApis.Common/DeprecatedApis.Common.csproj
+++ b/src/analyzers/DeprecatedApis/DeprecatedApis.Common/DeprecatedApis.Common.csproj
@@ -3,6 +3,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Microsoft.DotNet.UpgradeAssistant.DeprecatedApisAnalyzer.Common</AssemblyName>
     <RootNamespace>Microsoft.DotNet.UpgradeAssistant.DeprecatedApisAnalyzer</RootNamespace>
+    <!-- https://github.com/DotNetAnalyzers/StyleCopAnalyzers/issues/3395 -->
+    <NoWarn>$(NoWarn);SA1649</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers">
