--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -7,8 +7,8 @@
   },
 
   "DefaultTargetFrameworks": {
-    "Current": "net5.0",
-    "LTS": "netcoreapp3.1",
+    "Current": "net6.0",
+    "LTS": "net6.0",
     "Preview": "net6.0"
   },
 
