--- a/tests/tool/Integration.Tests/Integration.Tests.csproj
+++ b/tests/tool/Integration.Tests/Integration.Tests.csproj
@@ -12,6 +12,11 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <!-- The test framework brings in an old NuGet.Frameworks that ends up getting used rather than what MSBuild wants. -->
+    <!-- Workaround solution, VSTest issue to remove the dependendency for long term solution - https://github.com/microsoft/vstest/issues/3154 -->
+    <PackageReference Include="NuGet.Frameworks" Version="6.0.0-rc.258" Condition=" '$(TargetFramework)' == 'net6.0' "/>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\src\cli\Microsoft.DotNet.UpgradeAssistant.Cli\Microsoft.DotNet.UpgradeAssistant.Cli.csproj" />
     <ProjectReference Include="..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
   </ItemGroup>
