Add search command for extensions

--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/appsettings.json
@@ -1,4 +1,9 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "System": "Warning"
+    }
+  },
   "Telemetry": {
     "IsEnabled": "true",
     "InstrumentationKey": "66aba558-ae18-4ec4-a738-517213cfcdfb",
