--- a/src/extensions/nuget/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet.csproj
+++ b/src/extensions/nuget/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
-    <PackageReference Include="NuGet.ProjectModel" Version="6.0.0-rc.258" />
-    <PackageReference Include="NuGet.Frameworks" Version="6.0.0-rc.258" />
-    <PackageReference Include="NuGet.Configuration" Version="6.0.0-rc.258" />
-    <PackageReference Include="NuGet.Credentials" Version="6.0.0-rc.258" />
+    <PackageReference Include="NuGet.ProjectModel" Version="6.0.0" />
+    <PackageReference Include="NuGet.Frameworks" Version="6.0.0" />
+    <PackageReference Include="NuGet.Configuration" Version="6.0.0" />
+    <PackageReference Include="NuGet.Credentials" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
