--- a/.editorconfig
+++ b/.editorconfig
@@ -145,6 +145,7 @@ dotnet_naming_rule.members_should_be_pascal_case.style = pascal_case_style
 dotnet_naming_symbols.all_members.applicable_kinds = *
 
 dotnet_naming_style.pascal_case_style.capitalization = pascal_case
+dotnet_diagnostic.CA1848.severity = none
 
 # CSharp code style settings:
 [*.cs]
