--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "Microsoft.DotNet.UpgradeAssistant.Cli": {
       "commandName": "Project",
+      "commandLineArgs": "analyze -v -f html \"C:\\Users\\bleaphart\\Desktop\\BeanTrader.sln\"",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
       }
