--- a/src/components/Microsoft.DotNet.UpgradeAssistant.Analysis/Microsoft.DotNet.UpgradeAssistant.Analysis.csproj
+++ b/src/components/Microsoft.DotNet.UpgradeAssistant.Analysis/Microsoft.DotNet.UpgradeAssistant.Analysis.csproj
@@ -3,6 +3,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <EmbeddedResource Include="HTMLTemplate.html" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Sarif.Sdk" Version="2.4.12" />
   </ItemGroup>
   <ItemGroup>
