Add solution wide project file conversion behind feature flag
This change enables a user to run conversions to SDK style as a unit of work before continuing on to additional code changes. Currently set behind a feature flag so SOLUTION_WIDE_SDK_CONVERSION must be enabled for the solution wide conversion to be used.

--- a/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Solution/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.csproj
+++ b/src/extensions/default/Microsoft.DotNet.UpgradeAssistant.Steps.Solution/Microsoft.DotNet.UpgradeAssistant.Steps.Solution.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal.csproj" />
     <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
   </ItemGroup>
   <ItemGroup>
