Implement a transitive identification service against NuGet APIs
We have been using information from a lock file to identify the transitive dependencies for a project. This is problematic for our use cases in a couple of ways:

- Requires that the project file be up-to-date with the packages we want to check which may not be the case
- Requires `dotnet restore` to be run and we end up running it fairly often to ensure things are up-to-date

--- a/src/extensions/nuget/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet.csproj
+++ b/src/extensions/nuget/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet/Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
+    <PackageReference Include="NuGet.Commands" Version="6.0.0" />
     <PackageReference Include="NuGet.ProjectModel" Version="6.0.0" />
     <PackageReference Include="NuGet.Frameworks" Version="6.0.0" />
     <PackageReference Include="NuGet.Configuration" Version="6.0.0" />
