--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -11,6 +11,7 @@
     <PackageReleaseNotes>A changelog is available at https://github.com/dotnet/upgrade-assistant/blob/main/CHANGELOG.md.</PackageReleaseNotes>
     <PackageIcon>icon.png</PackageIcon>
     <IsExtensionHost>true</IsExtensionHost>
+    <ExtensionsDirectory>..\..\extensions\</ExtensionsDirectory>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="appsettings.Development.json">
@@ -96,20 +97,23 @@
     <ProjectReference Include="..\..\components\Microsoft.DotNet.UpgradeAssistant.Extensions\Microsoft.DotNet.UpgradeAssistant.Extensions.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Extension Include="..\..\extensions\default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.csproj">
+    <Extension Include="$(ExtensionsDirectory)default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default\Microsoft.DotNet.UpgradeAssistant.Extensions.Default.csproj">
       <Name>default</Name>
     </Extension>
-    <Extension Include="..\..\extensions\vb\Microsoft.DotNet.UpgradeAssistant.Extensions.VisualBasic\Microsoft.DotNet.UpgradeAssistant.Extensions.VisualBasic.csproj">
+    <Extension Include="$(ExtensionsDirectory)vb\Microsoft.DotNet.UpgradeAssistant.Extensions.VisualBasic\Microsoft.DotNet.UpgradeAssistant.Extensions.VisualBasic.csproj">
       <Name>vb</Name>
     </Extension>
-    <Extension Include="..\..\extensions\web\Microsoft.DotNet.UpgradeAssistant.Extensions.Web\Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj">
+    <Extension Include="$(ExtensionsDirectory)web\Microsoft.DotNet.UpgradeAssistant.Extensions.Web\Microsoft.DotNet.UpgradeAssistant.Extensions.Web.csproj">
       <Name>web</Name>
     </Extension>
-    <Extension Include="..\..\extensions\windows\Microsoft.DotNet.UpgradeAssistant.Extensions.Windows\Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj">
+    <Extension Include="$(ExtensionsDirectory)windows\Microsoft.DotNet.UpgradeAssistant.Extensions.Windows\Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj">
       <Name>windows</Name>
     </Extension>
-    <Extension Include="..\..\extensions\NuGet\Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet\Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet.csproj">
+    <Extension Include="$(ExtensionsDirectory)NuGet\Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet\Microsoft.DotNet.UpgradeAssistant.Extensions.NuGet.csproj">
       <Name>nuget</Name>
+    </Extension>
+    <Extension Include="$(ExtensionsDirectory)try-convert\Microsoft.DotNet.UpgradeAssistant.Extensions.TryConvert\Microsoft.DotNet.UpgradeAssistant.Extensions.TryConvert.csproj">
+      <Name>try-convert</Name>
     </Extension>
   </ItemGroup>
   <ItemGroup>
