--- a/src/extensions/try-convert/Microsoft.DotNet.UpgradeAssistant.Extensions.TryConvert/Microsoft.DotNet.UpgradeAssistant.Extensions.TryConvert.csproj
+++ b/src/extensions/try-convert/Microsoft.DotNet.UpgradeAssistant.Extensions.TryConvert/Microsoft.DotNet.UpgradeAssistant.Extensions.TryConvert.csproj
@@ -2,13 +2,27 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal.csproj" />
+    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Abstractions\MSBuild.Abstractions.csproj" />
     <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.Facts\MSBuild.Conversion.Facts.csproj" />
     <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.Package\MSBuild.Conversion.Package.csproj" />
     <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.Project\MSBuild.Conversion.Project.csproj" />
     <ProjectReference Include="..\..\..\..\modules\try-convert\src\MSBuild.Conversion.SDK\MSBuild.Conversion.SDK.csproj" />
-    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal\Microsoft.DotNet.UpgradeAssistant.Abstractions.Internal.csproj" />
-    <ProjectReference Include="..\..\..\common\Microsoft.DotNet.UpgradeAssistant.Abstractions\Microsoft.DotNet.UpgradeAssistant.Abstractions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ExtensionManifest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
