--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Autofac.Extensions.DependencyInjection">
       <Version>7.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="3.6.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting">
       <Version>5.0.0</Version>
     </PackageReference>
