--- a/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
+++ b/src/cli/Microsoft.DotNet.UpgradeAssistant.Cli/Microsoft.DotNet.UpgradeAssistant.Cli.csproj
@@ -46,7 +46,10 @@
       <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.CommandLine">
-      <Version>2.0.0-beta1.21216.1</Version>
+      <Version>2.0.0-beta3.22114.1</Version>
+    </PackageReference>
+    <PackageReference Include="System.CommandLine.NamingConventionBinder">
+      <Version>2.0.0-beta3.22114.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
