Refactor WIndowsDesktopUpdater and fix TFM test failure

--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/ExtensionManifest.json
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/ExtensionManifest.json
@@ -11,6 +11,36 @@
     ]
   },
 
+  "WinUIOptions": {
+    "NamespaceUpdates": {
+      "Windows.ApplicationModel.Resources.Core ": "Microsoft.Windows.ApplicationModel.Resources",
+      "Windows.UI.Composition": "Microsoft.UI.Composition",
+      "Windows.UI.Xaml": "Microsoft.UI.Xaml",
+      "Windows.UI.Colors":  "Microsoft.UI.Colors",
+      "Microsoft.Toolkit.Uwp.UI.Animations": "CommunityToolkit.WinUI.UI.Animations",
+      "Window.Current.Compositor": "App.Window.Compositor"
+    },
+    "ProjectFilePropertyUpdates": {
+      "Set": {
+        "Platforms": "x86;x64;arm64",
+        "ApplicationManifest": "app.manifest",
+        "EnablePreviewMsixTooling": "true",
+        "RuntimeIdentifiers": "win10-x86;win10-x64;win10-arm64",
+        "PublishProfile": "win10-$(Platform).pubxml"
+      },
+      "Remove": [
+        "WindowsXamlEnableOverview",
+        "AppxPackageSigningEnabled",
+        "GenerateAssemblyInfo"
+      ]
+    },
+    "FilesToDelete": [
+      "Properties\\AssemblyInfo.cs",
+      "App.xaml.old.cs",
+      "App.old.xaml"
+    ]
+  },
+
   "ExtensionServiceProviders": [
     "Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.dll"
   ]
