--- a/tests/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests.csproj
+++ b/tests/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests.csproj
@@ -3,8 +3,60 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="assets\TestClasses\ContentDialogCaller.cs" />
+    <Compile Remove="assets\TestClasses\ContentDialogCaller.Fixed.cs" />
+    <Compile Remove="assets\TestClasses\InitializeWithWindow.cs" />
+    <Compile Remove="assets\TestClasses\InitializeWithWindow.Fixed.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="assets\TestClasses\InitializeWithWindow.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\InitializeWithWindow.Fixed.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\ContentDialogCaller.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\ContentDialogCaller.Fixed.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\..\src\extensions\windows\Microsoft.DotNet.UpgradeAssistant.Extensions.Windows\Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj" />
     <ProjectReference Include="..\..\..\Microsoft.DotNet.UpgradeAssistant.TestHelpers\Microsoft.DotNet.UpgradeAssistant.TestHelpers.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis">
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features">
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Features">
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces">
+      <Version>$(MicrosoftCodeAnalysisVersion)</Version>
+    </PackageReference>
+    <PackageReference Include="coverlet.collector">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+      <Version>3.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit">
+      <Version>1.0.1-beta1.21265.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit">
+      <Version>1.0.1-beta1.21265.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Analyzer.Testing.XUnit">
+      <Version>1.0.1-beta1.21265.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing.XUnit">
+      <Version>1.0.1-beta1.21265.1</Version>
+    </PackageReference>
+    <PackageReference Include="Polly" Version="7.2.2" />
   </ItemGroup>
   <ItemGroup>
     <None Update="TestExpectedFiles\HighDpiEmptyExpected.txt">
