--- a/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui.csproj
+++ b/src/extensions/maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui/Microsoft.DotNet.UpgradeAssistant.Extensions.Maui.csproj
@@ -24,10 +24,12 @@
     <None Update="ExtensionManifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <PackageMap Include="PackageMaps\*.json" />
-    <TemplateConfigFile Include="Templates\**\*.json" />
-    <ExtensionFiles Include="PackageMaps\*" PackagePath="PackageMaps/" />
-    <ExtensionFiles Include="Templates\**\*" PackagePath="Templates/"/>
+    <Content Include="PackageMaps\*.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\**\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Remove="Templates\**\*.cs" />
   </ItemGroup>
 
