Support for Interop APIs and cleanup

--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <Compile Remove="Templates\WinAppSDKTemplates\App.xaml.cs" />
     <Compile Remove="Templates\WinAppSDKTemplates\MainWindow.xaml.cs" />
+    <Compile Remove="Templates\WinAppSDKTemplates\UWPToWinAppSDKUpgradeHelpers.cs" />
   </ItemGroup>
 
   <ItemGroup>
