--- a/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Templates/WinAppSDKTemplates/WinAppSDKTemplates.json
+++ b/src/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows/Templates/WinAppSDKTemplates/WinAppSDKTemplates.json
@@ -42,6 +42,11 @@
       "Path": "MainWindow.xaml",
       "Type": "Content",
       "Keywords": []
+    },
+    {
+      "Path": "UWPToWinAppSDKUpgradeHelpers.cs",
+      "Type": "Compile",
+      "Keywords": []
     }
   ],
   "TemplateOutputType": [
