--- a/tests/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests.csproj
+++ b/tests/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests.csproj
@@ -5,10 +5,26 @@
   <ItemGroup>
     <Compile Remove="assets\TestClasses\ContentDialogCaller.cs" />
     <Compile Remove="assets\TestClasses\ContentDialogCaller.Fixed.cs" />
+    <Compile Remove="assets\TestClasses\DataTransferManagerCaller.cs" />
+    <Compile Remove="assets\TestClasses\DataTransferManagerCaller.Fixed.cs" />
     <Compile Remove="assets\TestClasses\InitializeWithWindow.cs" />
     <Compile Remove="assets\TestClasses\InitializeWithWindow.Fixed.cs" />
+    <Compile Remove="assets\TestClasses\InteropsCaller.cs" />
+    <Compile Remove="assets\TestClasses\InteropsCaller.Fixed.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\TestClasses\InteropsCaller.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\InteropsCaller.Fixed.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\DataTransferManagerCaller.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\DataTransferManagerCaller.Fixed.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="assets\TestClasses\InitializeWithWindow.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
