--- a/tests/tool/Integration.Tests/IntegrationScenarios/WpfSample/csharp/Original/BeanTraderClient/packages.config
+++ b/tests/tool/Integration.Tests/IntegrationScenarios/WpfSample/csharp/Original/BeanTraderClient/packages.config
@@ -17,6 +17,6 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
   <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net472" />
-  <!--<package id="System.Security.Cryptography.X509Certificates" version="4.1.2" targetFramework="net472" />-->
+  <package id="System.Security.Cryptography.X509Certificates" version="4.1.2" targetFramework="net472" />
   <package id="Text.Analyzers" version="2.6.3" targetFramework="net472" developmentDependency="true" />
 </packages>
