--- a/tests/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests.csproj
+++ b/tests/extensions/windows/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests/Microsoft.DotNet.UpgradeAssistant.Extensions.Windows.Tests.csproj
@@ -7,12 +7,28 @@
     <Compile Remove="assets\TestClasses\ContentDialogCaller.Fixed.cs" />
     <Compile Remove="assets\TestClasses\DataTransferManagerCaller.cs" />
     <Compile Remove="assets\TestClasses\DataTransferManagerCaller.Fixed.cs" />
+    <Compile Remove="assets\TestClasses\Dispatcher.cs" />
+    <Compile Remove="assets\TestClasses\Dispatcher.Fixed.cs" />
     <Compile Remove="assets\TestClasses\InitializeWithWindow.cs" />
     <Compile Remove="assets\TestClasses\InitializeWithWindow.Fixed.cs" />
     <Compile Remove="assets\TestClasses\InteropsCaller.cs" />
     <Compile Remove="assets\TestClasses\InteropsCaller.Fixed.cs" />
+    <Compile Remove="assets\TestClasses\MRTResourceManagerCaller.cs" />
+    <Compile Remove="assets\TestClasses\MRTResourceManagerCaller.Fixed.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="assets\TestClasses\MRTResourceManagerCaller.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\MRTResourceManagerCaller.Fixed.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\Dispatcher.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="assets\TestClasses\Dispatcher.Fixed.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="assets\TestClasses\InteropsCaller.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
