updates CI pipeline to use VS2022, adds docs link to main readme, adds MAUI doc

--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -42,10 +42,10 @@ stages:
         pool:
           ${{ if or(eq(variables['System.TeamProject'], 'public'), in(variables['Build.Reason'], 'PullRequest')) }}:
             name: NetCore1ESPool-Public
-            demands: ImageOverride -equals build.windows.10.amd64.vs2019.pre.open
+            demands: ImageOverride -equals build.windows.amd64.vs2022.pre.open
           ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
             name: NetCore1ESPool-Internal
-            demands: ImageOverride -equals build.windows.10.amd64.vs2019
+            demands: ImageOverride -equals build.windows.amd64.vs2022.pre
         variables:
         # Enable signing for internal, non-PR builds
         - ${{ if and(ne(variables['System.TeamProject'], 'public'), notin(variables['Build.Reason'], 'PullRequest')) }}:
